tests/reject/variadic_not_last.ty
fn f(xs: ...int, y: int) -> int:
    return y
fn main():
    print("x")
